Avoid unnecessary horizontal scrolling on commit diffs

--- a/github-dark.css
+++ b/github-dark.css
@@ -108,7 +108,7 @@
 
  /* === No huge text === */
  pre, code {
-  font-size: 13px !important;
+  font-size: 12px !important;
  }
  .topsearch form input.search {
   font-size: 12px !important;
@@ -173,6 +173,10 @@
  .lines .line-numbers span {
   padding: 0 6px;
  }
+ .diff-line-code {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+ }
  /* ace (gist editor) */
  .ace_cursor {
   border-left-color: #ddd !important;
@@ -207,7 +211,7 @@
  .discusion-topic-infobar .milestone,.commit-group-heading,.list-browser-item.closed,body.windows #header,#footer .site,
  .ace_gutter,.jumbotron,#adv_code_search .search-page-label,.highlight table, .file-data .line-numbers {
   background: #111 none !important;
-  font-size: 13px !important;
+  font-size: 12px !important;
   border-color: #555 !important;
  }
 
